# Amazify

./: .gitignore  Build.bat  DEVTOOLS_METHODS.md  LICENSE  PROMPT.md  README.md  build_windows_installer.py  install.ps1  plugin_catalog.json  pyproject.toml
.github/workflows/: build-windows.yml  ci-windows.yml
amazify/: __init__.py  bridge.py  cli.py  config.py  devtools.py  launcher.py  logging_setup.py  native_bridge.py  plugin_manager.py  runtime.py  shortcuts.py  window_identity.py
packaging/: Amazify.iss  amazify_cli.py  amazify_installer.py
sample_plugins/amazify.button.focus-mode/: manifest.json  style.css
sample_plugins/amazify.resume-last-song/: manifest.json  plugin.js
sample_plugins/amazify.theme.dark-green/: manifest.json  theme.css
sample_plugins/amazify.true-big-mode/: manifest.json  plugin.js  style.css
sample_plugins/example.button.focus-mode/: manifest.json  plugin.js
sample_plugins/example.theme.dark-green/: manifest.json  plugin.js
tests/: test_cli.py  test_devtools.py  test_installer.py  test_launcher.py  test_plugin_manager.py  test_runtime.py  test_shortcuts.py  test_window_identity.py
