[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amazify"
version = "0.1.0"
description = "Prototype Amazon Music desktop runtime customization companion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websocket-client>=1.8.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
amazify = "amazify.cli:main"

[tool.setuptools.packages.find]
include = ["amazify*"]
